# gloria-victis-bot

./: .gitignore  Cargo.toml  README.md  build.rs
bindings/: Cargo.toml  build.rs
examples/: 2d.rs  colors.rs  craftloop.rs  cuda.rs  cv.rs  directshow.rs  e1.rs  fish_tesseract.rs  fish_tesseract2.rs  gamelist.rs  match.rs  mouse-buttons.rs  mouse.rs  opencl.rs  openvid.rs  tesseract.rs  text.rs  vcpkg.rs  win.rs  win_ocr.rs  winit.rs
src/: desktop.rs  gui.rs  main.rs  ocv.rs  ocv2.rs  screen.rs  shared.rs  statics.rs  tes.rs
src/app/: mod.rs
src/game_interactions/: craftloop.rs  mod.rs  salvage.rs
src/support/: clipboard.rs  mod.rs
wix/: main.wxs
