[package]
name = "gloria-victis-bot"
version = "0.1.0"
edition = "2018"
authors = ["simon"]

[features]
default = []
fishing = ["opencv", "tesseract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bindings = { path = "bindings" }
windows = "0.19.0"
lazy_static = "1.4"
anyhow = "1.0"
inputbot = "0.5.0"
env_logger = "0.9"
log = "0.4"
winapi = { version = "0.3.9", features = ["d3d11", "d3dcommon", "dxgi", "dxgi1_2", "dxgitype", "ntdef", "unknwnbase", "windef", "winerror", "winuser"] }
# "basetsd", "d3d11", "d3d11sdklayers", "d3d12", "d3d12sdklayers", "d3d12shader", "d3dcommon", "d3dcompiler", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "dxgidebug", "dxgiformat", "dxgitype", "handleapi", "minwindef", "synchapi", "unknwnbase", "winbase", "windef","winerror", "winnt", "winuser", "impl-default", "impl-debug"
wio = "0.2.2"
winit = "0.24"
imgui = "0.7"
imgui-glium-renderer = "0.7"
imgui-winit-support = "0.7"
clipboard = "0.5"
glium = { version = "0.29", default-features = true }
image = "0.23.14"
# imageproc = { version = "0.22", features = ["display-window"] , optional = true }
# opencv = {version = "0.53" }
tokio = {version = "1.9", features = ["full", "macros"]}
tesseract = { version = "0.9" , optional = true }
opencv = {version = "0.53", features =  ["clang-runtime"] , optional = true}
raw-window-handle = "0.3.3"
rand = "0.8.4"
[dev-dependencies]
bindings = { path = "bindings" }
tesseract = { version = "0.9" }
opencv = {version = "0.53", features =  ["clang-runtime"]}
vcpkg = "0.2"
