[package]
authors = ["simon"]
edition = "2021"
name = "gloria-victis-bot"
version = "0.1.0"

[features]
default = []
fishing = ["opencv", "tesseract"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# bindings = { path = "bindings" }
# windows = "0.25"

anyhow = "1.0"
env_logger = "0.10.0"
inputbot = "0.6.0"
lazy_static = "1.4"
log = "0.4"
winapi = { version = "0.3.8", features = [
  "d3d11",
  "d3dcommon",
  "dxgi",
  "dxgi1_2",
  "dxgitype",
  "ntdef",
  "unknwnbase",
  "windef",
  "winerror",
  "winuser",
] }
# "basetsd", "d3d11", "d3d11sdklayers", "d3d12", "d3d12sdklayers", "d3d12shader", "d3dcommon", "d3dcompiler", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "dxgidebug", "dxgiformat", "dxgitype", "handleapi", "minwindef", "synchapi", "unknwnbase", "winbase", "windef","winerror", "winnt", "winuser", "impl-default", "impl-debug"
clipboard = "0.5.0"
eframe = { version = "0.23.0", features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui = { versions = "0.23.0", features = ["bytemuck", "tracing"] }
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # 
egui_winit_platform = "0.19.0"
glium = { version = "0.32.1", default-features = true }
imageproc = "0.23.0"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
winit = "0.28"
wio = "0.2.2"

# imageproc = { version = "0.22", features = ["display-window"] , optional = true }
# opencv = {version = "0.53" }
opencv = { version = "0.85.1", features = ["clang-runtime"], optional = true }
rand = "0.8.4"
raw-window-handle = "0.6.0"
tesseract = { version = "0.15.0", optional = true }
tokio = { version = "1.13", features = ["full", "macros"] }

[dev-dependencies]
# cv = { git = "https://github.com/rust-cv/cv.git", features =  ["akaze"], default-features = true }
# web-sys = "0.3.54"
# bindings = { path = "bindings" }
futures = "0.3"
opencv = { version = "0.85.1", features = ["clang-runtime"] }
tesseract = { version = "0.15.0" }
vcpkg = "0.2"

[dev-dependencies.windows]
features = [
  # "Win32_System_WinRT",
  "UI",
  "Data_Xml_Dom",
  "AI",
  "ApplicationModel",
  "Win32_Foundation",
  "Gaming_UI",
  "Gaming_Preview_GamesEnumeration",
  "Media_Ocr",
  "Graphics_Imaging",
  "Storage_Streams",
  "Foundation",
  "Foundation_Collections",          # "Win32_Graphics_DirectShow",
  "UI_Input",
  "Devices_Input",
  "Devices_Input_Preview",
  "Gaming_Input",
  "Gaming_Input_Custom",
  "Gaming_Input_Preview",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_Foundation",
]
version = "0.51.1"
